fix issue with wrapping 'get started'

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,15 @@
 
+.navbar-brand-container {
+  margin-right: 0;
+}
+
+
+@media (min-width: 1020px) {
+.navbar-brand-container {
+  margin-right: 1em;
+}
+}
+
 @media (min-width: 991.98px) {
 #quarto-header {
   border-bottom: 1px solid #dee2e6;
